--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.9.2",
     "multer": "^1.4.2",
     "nodemon": "^2.0.2",
+    "serve-static": "^1.14.1",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
